--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,4 +1,7 @@
 <div>
   <h1>{{message}}</h1>
-  <div rc-recipe></div>
+  <div rc-recipe
+    title="'carbonara'"
+    description="carbonara">
+  </div>
 </div>
