Update name of desc to description

--- a/app/partials/recipe.html
+++ b/app/partials/recipe.html
@@ -1,5 +1,5 @@
 <h1>{{title}}<h1>
-<p class="desc">{{desc}}</p>
+<p class="description">{{description}}</p>
 <img src={{image}} height="200" width="350"/>
 
 <section id="ingredients">
