--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,7 +1,6 @@
 <div>
   <h1>{{message}}</h1>
   <div rc-recipe
-    title="'carbonara'"
-    description="carbonara">
+    recipe="recipe">
   </div>
 </div>
