--- a/app/partials/recipe.html
+++ b/app/partials/recipe.html
@@ -1,3 +1,4 @@
+<article class="recipe">
 <h1>{{title}}<h1>
 <p class="description">{{description}}</p>
 <img src={{image}} height="200" width="350"/>
@@ -19,3 +20,4 @@
 </section>
 
 <button ng-click="clickMe()">Click Me!</button>
+</article>
