--- a/app/styles/sass/app.scss
+++ b/app/styles/sass/app.scss
@@ -1,6 +1,8 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+// Import Bootstrap Compass integration
+@import "bootstrap-compass";
 
-@import "compass/reset";
+// Import custom Bootstrap variables
+@import "bootstrap-variables";
+
+// Import Bootstrap for Sass
+@import "bootstrap";
